# rlm-lens

./: .env.example  .gitignore  AGENTS.md  Makefile  PROMPT_FOR_CODEX.md  README.md  railway.json
.codex/: PLANS.md  SCRATCHPAD.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/rlm_lens/: __init__.py  config.py  db.py  demo.py  evaluation.py  events.py  exporter.py  ids.py  indexer.py  main.py  models.py  policy.py  providers.py  retrieval.py  security.py  services.py  starter_corpora.py  starter_corpora_cli.py  utils.py  watcher.py
backend/src/rlm_lens/api/: common.py  router.py
backend/src/rlm_lens/runtime/: adapter.py  environment.py  grounding.py  logger.py  runner.py
backend/tests/: test_adapter.py  test_advanced_api.py  test_api.py  test_config.py  test_diagnostics.py  test_export.py  test_grounding.py  test_indexer.py  test_runtime.py  test_security.py  test_starter_corpora_api.py
docs/: ACCEPTANCE_CHECKLIST.md  API_SPEC.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_MODEL.md  DEPLOYMENT_VERCEL_RAILWAY.md  DIAGRAMS.md  EVAL_PLAN.md  NON_TECHNICAL_OVERVIEW.md  ONBOARDING_GUIDE.md  PRD.md  QUALITY_SCORECARD.md  RELEASE_READINESS.md  ROADMAP.md  RUNBOOK.md  SECURITY_PRIVACY.md  TRACE_FORMAT.md  TROUBLESHOOTING.md  USER_GUIDE.md  UX_SPEC.md  visual-verification-protocol.md
examples/: demo_prompts.md
frontend/: .env.production.example  eslint.config.js  index.html  package.json  playwright.config.d.ts  playwright.config.js  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  (+3 more)
(+47 files in other folders)
