[project]
name = "rlm-lens-backend"
version = "0.1.0"
description = "RLM-Lens backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1"
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.11.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_lens"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "BLE", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
